# Secure-Delete

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: functions.h
src/: functions.c  main.c
